--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3229,7 +3229,7 @@ input, select, textarea {
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background-color: #D7FDDF;
+			background-color: aliceblue;
 			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
 			background-size: auto,								auto,														100% auto;
 			background-position: center,								center,														top center;
@@ -4292,6 +4292,16 @@ input, select, textarea {
 			font-size: 0.8rem;
 		}
 
+
+		.post
+		{background-color: whitesmoke;
+
+		}
+
+		.posts
+		{
+			background-color: whitesmoke;
+		}
 		@media screen and (max-width: 980px) {
 
 			#footer {
